--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+    "extends": "react-app",
+    "eslintIgnore": [
+      "src/**/*.test.ts",
+      "src/**/*.test.tsx"
     ]
   },
   "browserslist": {
@@ -39,6 +40,30 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
+    "eslint": "8.19.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "lint-staged": "13.0.3",
+    "prettier": "2.7.1"
+  },
+  "lint-staged": {
+    "src/**/*.+(js|jsx|ts|tsx|json)": [
+      "eslint --fix"
+    ],
+    "src/**/*.+(js|jsx|ts|tsx|css|sass|less|json)": [
+      "prettier --write"
     ]
   }
 }
