--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "13.5.0",
@@ -10,6 +13,7 @@
     "@types/node": "16.11.44",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "framer-motion": "^6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
@@ -39,7 +43,6 @@
     ]
   },
   "devDependencies": {
-
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
     "eslint": "8.19.0",
