--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "2.2.4",
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.3",
@@ -13,7 +10,8 @@
     "@types/node": "16.11.44",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "framer-motion": "6.5.1",
+    "aos": "2.3.4",
+    "bulma": "0.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
