--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.3",
+    "@types/aos": "3.0.4",
     "@types/jest": "28.1.5",
     "@types/node": "16.11.44",
     "@types/react": "18.0.15",
