--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "16.11.44",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "1.8.4",
     "aos": "2.3.4",
     "bulma": "0.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "1.8.7",
     "typescript": "4.7.4",
     "web-vitals": "2.1.4"
   },
