Test build workflow

--- a/.github/workflows/build_workflow.yml
+++ b/.github/workflows/build_workflow.yml
@@ -3,10 +3,13 @@ name: Build Workflow
 on:
   push:
     branches: [master]
+  pull-request:
+    branches: [master]
+
 
 jobs:
   publish-site:
-    if: ${{ github.event_name == 'push' }}
+    # if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-latest
     defaults:
       run:
