--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "tomvo.me",
+  "homepage": "https://tomvo.me",
   "name": "personal-website-react",
   "version": "0.1.0",
   "private": true,
