--- a/.github/workflows/build_workflow.yml
+++ b/.github/workflows/build_workflow.yml
@@ -47,13 +47,13 @@ jobs:
         run: |
           git clone https://github.com/tomvothecoder/tomvo.me --branch gh-pages --single-branch gh-pages
 
+          # Delete the existing content
           cd gh-pages
           rm -r *
           echo 'tomvo.me' > CNAME
 
-          # Add index.html to point to `master` branch automatically
-          printf '<meta http-equiv="refresh" content="0; url=./build/index.html" />' >> index.html
-          cp -r ../build .
+          # Move `/build` content into the root of `gh-pages`.
+          mv ../build/* .
 
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
