--- a/.github/workflows/build_workflow.yml
+++ b/.github/workflows/build_workflow.yml
@@ -2,7 +2,7 @@ name: Build Workflow
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
   workflow_dispatch:
 
@@ -44,13 +44,16 @@ jobs:
         run: |
           git clone https://github.com/tomvothecoder/tomvo.me --branch gh-pages --single-branch gh-pages
 
+          # Delete the existing content
           cd gh-pages
           rm -r *
           echo 'tomvo.me' > CNAME
 
-          # Add index.html to point to `master` branch automatically
-          printf '<meta http-equiv="refresh" content="0; url=./build/index.html" />' >> index.html
-          cp -r ../build .
+          # Move `/build` content into the root of `gh-pages`.
+          mv ../build/* .
+          # Handle client side routing with 404.html redirect.
+          # Source: https://github.com/rafgraph/spa-github-pages
+          cp ../404.html .
 
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
