--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "personal-website-react",
+  "name": "tomvo.me",
+  "homepage": "https://tomvo.me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
