--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:base",
+    "group:allNonMajor"
   ],
   "groupName": "all",
-  "schedule": ["every monday"],
+  "schedule": ["on the first day of the month"],
   "labels": ["Type: Dependencies"]
 }
