--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
-    "react-scripts": "5.0.1",
+    "react-player": "2.16.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "1.8.7",
     "typescript": "4.8.3",
     "web-vitals": "2.1.4"
@@ -34,7 +35,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -69,5 +69,6 @@
     "src/**/*.+(js|jsx|ts|tsx|css|sass|less|json)": [
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
